tests/error/comptime/allocation6.bz
// error: unable to allocate 9223372036854775808 elements of size 4
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		__builtin_comptime_free(__builtin_comptime_malloc(int32, 1u64 << 63));
	});
}
